# euterpe

./: .env.example  .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  NOTICE  Procfile  README.md  package-lock.json  package.json  redocly.yaml
.cargo/: config.toml
.cursor/rules/: rust-streaming-io.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
.husky/: pre-commit
crates/euterpe-converter/: Cargo.toml  README.md
crates/euterpe-converter/examples/: apply_tags.rs  bench_convert.rs  convert_check.rs
crates/euterpe-converter/src/: convert.rs  encode.rs  error.rs  format.rs  lib.rs  pcm.rs  pcm_push.rs  settings.rs  tags.rs
crates/euterpe-converter/src/decode/: alac.rs  ape.rs  mod.rs  wav.rs
crates/euterpe-converter/src/encode/: libflac.rs  streaming.rs
crates/euterpe-converter/src/source/: alac.rs  ape.rs  collect.rs  mod.rs  traits.rs  wav.rs  wavpack.rs
crates/euterpe-cue/: Cargo.toml
crates/euterpe-cue/src/: lib.rs
crates/euterpe-cue/tests/: cue_parse_validate.rs  cue_split.rs
crates/euterpe-hawk/: Cargo.toml  README.md
crates/euterpe-hawk/src/: axum.rs  backtrace.rs  catcher.rs  config.rs  contexts.rs  error_chain.rs  event.rs  filter.rs  http_addons.rs  lib.rs  panic_flag.rs  scope.rs  sender.rs  source.rs  token.rs  tracing_layer.rs  trim.rs
crates/euterpe-qobuz/: Cargo.toml
crates/euterpe-qobuz/src/: album_url.rs  bundle.rs  client.rs  config.rs  error.rs  lib.rs  oauth.rs  pagination.rs  signing.rs  traits.rs
crates/euterpe-qobuz/src/api/: auth.rs  catalog.rs  favorites.rs  mod.rs  streaming.rs
crates/euterpe-qobuz/src/models/: album.rs  artist.rs  catalog_meta.rs  deser.rs  favorites.rs  mod.rs  track.rs  user.rs
crates/euterpe-qobuz/tests/: api_integration.rs  bundle_fixtures.rs  integration_live.rs  signing_golden.rs
crates/euterpe-qobuz/tests/fixtures/: album_get.json  album_get_rich.json  artist_get_page0.json  artist_get_page1.json  bundle_sample.js  favorites_albums_page0.json  favorites_albums_page0_p2.json  favorites_albums_page1.json  get_file_url_flac.json  get_file_url_restricted.json  login_free.json  login_ok.json
crates/euterpe-server/: Cargo.toml
crates/euterpe-server/src/: app.rs  config.rs  credentials.rs  crypto.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  state.rs  static_files.rs
crates/euterpe-server/src/api/: convert.rs  downloads.rs  health.rs  integrations.rs  keyset.rs  library.rs  mod.rs  qobuz.rs  server.rs  settings.rs  torrent.rs
crates/euterpe-server/src/db/: albums.rs  artists.rs  convert_jobs.rs  cue_jobs.rs  download_jobs.rs  favorites.rs  integrations.rs  library_scan_runs.rs  mod.rs  qobuz_accounts.rs  settings.rs  sync_runs.rs  tracks.rs
crates/euterpe-server/src/integrations/: apply.rs  catalog.rs  discogs.rs  gnudb.rs  mod.rs  musicbrainz.rs  provider.rs  registry.rs  tracktype.rs  types.rs
crates/euterpe-server/src/routes/: downloads.rs  events.rs  integrations.rs  library.rs  mod.rs  qobuz.rs  settings.rs  settings_ext.rs  torrent.rs
crates/euterpe-server/src/services/: app_settings.rs  integrations.rs  library_scan.rs  mod.rs  qobuz_oauth.rs  qobuz_sync.rs  storage_watch.rs  torrent_cleanup.rs  torrent_import.rs  torrent_settings.rs  torrent_staging.rs
crates/euterpe-server/src/services/convert/: mod.rs  worker.rs
crates/euterpe-server/src/services/download/: mod.rs  payload.rs  progress.rs  resolve.rs  torrent_job.rs  worker.rs
crates/euterpe-server/tests/: api_cue.rs  api_downloads.rs  api_events.rs  api_health.rs  api_integrations.rs  api_library.rs  api_library_metadata.rs  api_qobuz.rs  api_qobuz_oauth.rs  api_server_info.rs  api_static.rs  api_storage_settings.rs  api_torrent.rs  keyset_cursor.rs  openapi_contract.rs
crates/euterpe-server/tests/fixtures/: silent.flac
crates/euterpe-server/tests/support/: download_mock.rs  mod.rs  qobuz_account.rs  qobuz_mock.rs  schema.rs
crates/euterpe-smb/: Cargo.toml
crates/euterpe-torrent/: Cargo.toml
crates/euterpe-torrent/src/: engine.rs  error.rs  lib.rs  types.rs
crates/euterpe-torrent/tests/: magnet_integration.rs
docker/: Dockerfile
docs/: README.md  README.ru.md  windows_first_run.md
docs/00-overview/: development-process.ru.md  future-plans.ru.md  glossary.ru.md  roadmap.ru.md  vision.ru.md
docs/01-architecture/: data-flow.ru.md  monorepo-layout.ru.md  security.ru.md  system-context.ru.md
docs/02-backend/: axum-server.ru.md  job-queue.ru.md  library-scan.ru.md  migrations.ru.md  openapi-first.ru.md  sqlite-schema.ru.md
docs/03-frontend/: api-client.ru.md  screens.ru.md  stack.ru.md
docs/04-deployment/: backup-restore.ru.md  compose.example.yml  cross-compile.ru.md  docker.ru.md
docs/05-qobuz/: README.ru.md  api-reference.ru.md  authentication.ru.md  errors.ru.md  favorites.ru.md  oauth-and-tokens.ru.md  pagination.ru.md  quality-formats.ru.md  reference-implementation.ru.md  request-signing.ru.md
docs/06-library-euterpe-qobuz/: README.ru.md  crate-design.ru.md  implementation-plan.ru.md  testing.ru.md  types.ru.md
docs/07-integrations/: README.ru.md
docs/07-iteration-1/: scope.ru.md
docs/adr/: 0001-sqlite-wal.md  0002-files-as-source-of-truth.md  0003-euterpe-qobuz-first.md  0004-test-driven-development.md  0005-qobuz-token-auth-primary.md  0006-openapi-first.md
docs/smb/: README.md  change-notify-watcher.md  converter-and-cue-native-io-notes.md  converter-worker.md  (+5 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
migrations/: 001_phase2_qobuz.sql  002_phase3_download_jobs.sql  003_qobuz_favorites_slug.sql  004_phase5_library.sql  005_track_tag_fields.sql  006_qobuz_accounts_oauth.sql  007_qobuz_favorites_cover_url.sql  008_integrations.sql  009_library_scan_progress_columns.sql  010_tracks_file_size.sql  011_download_job_torrent.sql  012_download_queue_position.sql  013_download_job_paused_status.sql  014_app_settings_seeds.sql  015_convert_jobs.sql  016_convert_jobs_active_album_index.sql  017_cue_jobs.sql
openapi/: .gitignore  README.md  openapi.yaml  package-lock.json  package.json  redocly.yaml
(+78 files in other folders)
