[package]
name = "euterpe-converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Lossless audio conversion to FLAC (WAV, ALAC, APE)"

[dependencies]
ape-decoder = "0.3.2"
flacenc = { version = "0.5.1", default-features = false, features = ["log"] }
hound = "3.5"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "alac", "pcm", "flac"] }
thiserror = "2"
tracing = "0.1"

[features]
default = []
wavpack = []

[dev-dependencies]
claxon = "0.4.3"
tempfile = "3"

[lib]
doctest = false
