[package]
name = "euterpe-converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Lossless audio conversion to FLAC (WAV, ALAC, APE)"

[dependencies]
ape-decoder = "0.3.2"
flac-bound = { version = "0.5.0", default-features = false, features = ["libflac-noogg"] }
hound = "3.5"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "alac", "pcm", "flac"] }
thiserror = "2"
tracing = "0.1"
wavpack-sys = { version = "0.4.0", optional = true }

[features]
default = []
wavpack = ["dep:wavpack-sys"]

[dev-dependencies]
claxon = "0.4.3"
tempfile = "3"

[lib]
doctest = false
