[package]
name = "euterpe-qobuz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Async Qobuz API client for Euterpe"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
pretty_assertions = "1"

[features]
default = []
download = []
raw_json = []
