[package]
name = "euterpe-server"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Axum REST API for Euterpe"

[[bin]]
name = "euterpe-server"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
euterpe-qobuz = { path = "../euterpe-qobuz" }
hex = "0.4"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
http-body-util = "0.1"
jsonschema = "0.29"
pretty_assertions = "1"
serde_yaml = "0.9"
tower = "0.5"
