[package]
name = "euterpe-server"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Axum REST API for Euterpe"

[[bin]]
name = "euterpe-server"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
flume = { version = "0.11", features = ["async"] }
euterpe-qobuz = { path = "../euterpe-qobuz" }
futures-util = "0.3"
hex = "0.4"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp"] }
walkdir = "2"
sha2 = "0.10"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
http-body-util = "0.1"
mockito = "1"
jsonschema = "0.29"
pretty_assertions = "1"
serde_yaml = "0.9"
tempfile = "3"
hound = "3"
tower = "0.5"
