[package]
name = "euterpe-torrent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "librqbit wrapper for Euterpe torrent downloads"

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4"
async-trait = "0.1"
librqbit = { git = "https://github.com/ikatson/rqbit", tag = "v9.0.0-beta.2", default-features = false, features = [
    "rust-tls",
    "disable-upload",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
